changes for JUNIT CHAGNES